1.4.16
 * Fix for missing Healthchecks monitoring payload or HTTP 500 due to incorrect unicode encoding.

1.4.15
 * Fix for database dump removal incorrectly skipping some database dumps.
 * #123: Support for mounting an archive as a FUSE filesystem via "borgmatic mount" action, and
   unmounting via "borgmatic umount". See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/extract-a-backup/#mount-a-filesystem

1.4.14
 * Show summary log errors regardless of verbosity level, and log the "summary:" header with a log
   level based on the contained summary logs.

1.4.13
 * Show full error logs at "--verbosity 0" so you can see command output without upping the
   verbosity level.

1.4.12
 * #247: With "borgmatic check", consider Borg warnings as errors.
 * Dial back the display of inline error logs a bit, so failed command output doesn't appear
   multiple times in the logs (well, except for the summary).

1.4.11
 * #241: When using the Healthchecks monitoring hook, include borgmatic logs in the payloads for
   completion and failure pings.
 * With --verbosity level 1 or 2, show error logs both inline when they occur and in the summary
   logs at the bottom. With lower verbosity levels, suppress the summary and show error logs when
   they occur.

1.4.10
 * #246: Fix for "borgmatic restore" showing success and incorrectly extracting archive files, even
   when no databases are configured to restore. As this can overwrite files from the archive and
   lead to data loss, please upgrade to get the fix before using "borgmatic restore".
 * Reopen the file given by "--log-file" flag if an external program rotates the log file while
   borgmatic is running.

1.4.9
 * #228: Database dump hooks for MySQL/MariaDB, so you can easily dump your databases before backups
   run.
 * #243: Fix repository does not exist error with "borgmatic extract" when repository is remote.

1.4.8